<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   tools:context=".OnboardingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/onboardMainTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:gravity="center"
                android:text="@string/before_we_get_started"
                android:textColor="#0E0E0E"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/budgetMainTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="serif"
                android:text="@string/set_up_your_budget"
                android:textColor="#2962FF"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/onboardMainTv" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="352dp"
                android:layout_height="58dp"
                android:layout_marginTop="30dp"
                android:hint="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/budgetMainTv"
                app:startIconDrawable="@drawable/ic_person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/NameTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/BudgetTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="352dp"
                android:layout_height="58dp"
                android:layout_marginTop="30dp"
                android:hint="@string/monthly_budget"
                app:layout_constraintEnd_toEndOf="@+id/nameTextInput"
                app:layout_constraintStart_toStartOf="@+id/nameTextInput"
                app:layout_constraintTop_toBottomOf="@+id/nameTextInput"
                app:startIconDrawable="@drawable/ic_budget">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/BudgetTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/incomeTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="352dp"
                android:layout_height="58dp"
                android:layout_marginTop="30dp"
                android:hint="@string/monthly_income"
                app:layout_constraintEnd_toEndOf="@+id/BudgetTextInput"
                app:layout_constraintStart_toStartOf="@+id/BudgetTextInput"
                app:layout_constraintTop_toBottomOf="@+id/BudgetTextInput"
                app:startIconDrawable="@drawable/ic_baseline_money_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/incomeTextEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveDetailsBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="#1157E3"

                android:text="@string/save_details"
                android:textColor="#171616"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/incomeTextInput"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/incomeTextInput"
                app:layout_constraintTop_toBottomOf="@+id/incomeTextInput"
                app:layout_constraintVertical_bias="1.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>